<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/addproduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:gravity="center"
        android:text="@string/add_product"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt30"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/catLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/addproduct">

        <TextView
            android:id="@+id/categorytxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_weight="1"
            android:text="@string/category"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt20" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/margin10"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_weight="1"
            android:padding="@dimen/margin10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/catLay">

        <TextView
            android:id="@+id/nametxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt20" />

        <EditText
            android:id="@+id/nameEditTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_weight="1"
            android:background="@drawable/bg"
            android:padding="@dimen/margin10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/descLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/nameLay">

        <TextView
            android:id="@+id/desctxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10"

            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_weight="1"
            android:text="@string/desc"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt20" />

        <EditText
            android:id="@+id/descEditTxt"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="@dimen/margin10"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_weight="1"
            android:background="@drawable/bg"
            android:maxHeight="100dp"
            android:maxLines="20"
            android:padding="@dimen/margin10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expiryLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/descLay">

        <TextView
            android:id="@+id/expirytxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_weight="1"
            android:text="@string/ExpiryDate"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt20" />

        <EditText
            android:id="@+id/expiryEditTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_weight="1"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"
            android:background="@drawable/bg"
            android:padding="@dimen/margin10" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/imageLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/expiryLay"

        >

        <TextView
            android:id="@+id/imagetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:text="@string/image"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt20" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin10"
            android:layout_toEndOf="@id/imagetxt"
            android:layout_toRightOf="@id/imagetxt"
            android:onClick="addImages"
            android:id="@+id/imagebut"
            android:text="@string/add_more_images" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_below="@id/imagebut"
            android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/imageContainer"

           android:layout_margin="@dimen/margin10"
           android:orientation="horizontal" />
        </HorizontalScrollView>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin10"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLay" />/
    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progressBar"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>